--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -5,12 +5,13 @@
 <title>Welcome to YorubaName</title>
 <meta name="generator" content="YorubaName" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href="/assets/img/favicon.ico" rel="shortcut icon">
+<link href="/assets/img/favicon.png" rel="shortcut icon">
 <link href="/assets/css/bootstrap.css" rel="stylesheet">
 <link href="/assets/css/styles.css" rel="stylesheet">
 <link href="/assets/css/jquery-ui.min.css" rel="stylesheet">
 <link href="/assets/css/keyboard.css" rel="stylesheet">
 <link href="/assets/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Josefin+Slab|ABeeZee|Glegoo|Pontano+Sans' rel='stylesheet' type='text/css'>
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
@@ -34,10 +35,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <h2><a class="logo" href="http://www.yorubaname.com"><img src="/assets/img/yoruba-dictionary-logo.png"  alt="YorubaName.com" title="YorubaName.com" /></a></h2>
+                    <h2><a class="logo" href="http://www.yorubaname.com"><img src="/assets/img/yoruba-dictionary-logo-b.png"  alt="YorubaName.com" title="YorubaName.com" /></a></h2>
                 </div>                           
                 <div class="collapse navbar-collapse navbar-main-collapse">
-                    <ul class="nav navbar-nav navbar-right">                                                                
+                    <ul class="nav navbar-nav navbar-right">   
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle lang" data-toggle="dropdown"><i class="fa fa-list sec-color"></i> Menu<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
@@ -50,6 +51,9 @@
                                     <li><a href="#">{{message "lang.contact"}}</a></li>
                                 </ul>
                         </li>
+                        <li class="social-icon"><a href="https://www.facebook.com/YorubaNames"><i class="fa fa-facebook"></i></a></li>
+                        <li class="social-icon"><a href="https://twitter.com/YorubaNames"><i class="fa fa-twitter"></i></a></li>
+
                         
                         <!--Disabling the drop down till we support another language
                         <li class="dropdown">-->
