--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -27,7 +27,7 @@
                     <li><h5 class="pri-color">{{message "lang.latest-search"}}</h5></li>
                     <hr />
                     {{#each latestSearches}}
-                        <li><a href="/entries/{{this.name}}">{{this.name}}</a></li>
+                        <li><a href="/entries/{{this}}">{{this}}</a></li>
                     {{/each}}
                 </ul>
             </div>
@@ -36,7 +36,7 @@
                     <li><h5 class="pri-color">{{message "lang.latest-add"}}</h5></li>
                     <hr />
                     {{#each latestAdditions}}
-                        <li><a href="/entries/{{this.name}}">{{this.name}}</a></li>
+                        <li><a href="/entries/{{this}}">{{this}}</a></li>
                     {{/each}}
                 </ul>
             </div>
@@ -45,7 +45,7 @@
                     <li><h5 class="pri-color">{{message "lang.most-popular"}}</h5></li>
                     <hr />
                     {{#each mostPopular}}
-                        <li><a href="/entries/{{this.name}}">{{this.name}}</a></li>
+                        <li><a href="/entries/{{this}}">{{this}}</a></li>
                     {{/each}}
                 </ul>
             </div>
