--- a/website/src/main/resources/public/assets/css/styles.css
+++ b/website/src/main/resources/public/assets/css/styles.css
@@ -28,12 +28,11 @@ body { background: #FFFFFF; }
 	margin: 33px 0px 0px 0px
 }
 .jumbotron {
-	background: #FAFAFC;
+	background: #F2F2F2;
 	color: #FFF;
 	margin-bottom: 25px;
 	padding-top: 1px;
 	padding-bottom: 25px;
-	border-bottom: 4px solid #C8AD75;
 }
 .jumbotron h1 {
 	font-size: 26px;
@@ -68,6 +67,7 @@ body { background: #FFFFFF; }
 .jumbotron .container {
     max-width: 960px;
 }
+.jumbotron p { font-size:14px; }
 #home-banner {  
     background-size:100%;  
     width:100%; 
@@ -77,10 +77,15 @@ body { background: #FFFFFF; }
 	-o-user-select: none; 
 	user-select: none; 
 }
+.well {
+	background-color: #F;
+	border: none 0px;
+	box-shadow: none;
+}
 .search-input { position: relative; 
 	width:70%;
   	display: inline-block;
-  	margin: 0px 0px 60px 0px;
+  	margin: 0px 0px 20px 0px;
 }
 .th, th-query{ 
 	text-indent: 0px; 
@@ -90,7 +95,9 @@ body { background: #FFFFFF; }
 	margin: 0;
 	border: 0;
 	font-size: 17px;
-	box-shadow: inset 0 0 0 1px #555,0 0 0 6px rgba(255,255,255,0.5),0 0 4px 6px rgba(0,0,0,0.25);
+	-webkit-box-shadow: 0px 0px 0px 4px rgba(222,218,222,1);
+-moz-box-shadow: 0px 0px 0px 4px rgba(222,218,222,1);
+box-shadow: 0px 0px 0px 4px rgba(222,218,222,1);
 	color: #555555;
 }
 .tt-hint {
@@ -116,7 +123,9 @@ body { background: #FFFFFF; }
 }
 .search-input input:focus {
     border: 0;
-    box-shadow: inset 0 0 0 1px #555,0 0 0 6px rgba(255,255,255,0.5),0 0 4px 6px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0px 0px 0px 4px rgba(222,218,222,1);
+-moz-box-shadow: 0px 0px 0px 4px rgba(222,218,222,1);
+box-shadow: 0px 0px 0px 4px rgba(222,218,222,1);
 }
 .search-input .fa-keyboard-o { 
   	position: absolute;
@@ -129,15 +138,9 @@ body { background: #FFFFFF; }
 	color: #075265;
 }
 .search {
-	background-color: #075265;
-	color: #FFF;
-	padding-bottom:5px;
-	padding-top:15px;
-	border-left: 1px solid #C8AD75;
-	border-right: 1px solid #C8AD75;
-	border-bottom: 1px solid #C8AD75;
-	border-radius: 0 0 10px 10px;
-	position: absolute;
+	color: #C8AD75;
+	padding-top: 15px;
+	padding-bottom: 5px;
 }
 .search-box {
 	color: #FFF;
@@ -280,10 +283,24 @@ body { background: #FFFFFF; }
 	border: 1px solid #F0F0F0;
 	border-radius: 2px;
 	padding: 15px;
-	margin: 10px;
+	margin: 10px 0px 10px 0px;
 }
-.col-md-3 {
-    width: 30%;
+.name {
+	margin-top: 0px;
+	text-transform: capitalize;
+	font: 'Benton Sans','Helvetica','sans-serif';
+	font-weight: 700;
+}
+.name button { 
+	border-radius: 8px; 
+	border: none;
+}
+.name-s-col {
+	background: #E0E0E0;
+	border-radius: 2px;
+	margin: 5px;
+	padding: 5px;
+	text-transform: uppercase;
 }
 .side-bar {
 	width: 100%;
