--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Welcome to YorubaName</title>
+<title>{{ title }} - YorubaName</title>
 <meta name="generator" content="YorubaName" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="/assets/img/favicon.png" rel="shortcut icon">
