--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -1,23 +1,115 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- Header -->
+{{> header }}
 
-<head>
- {{> header }}
-    <title>{{ title }}</title>
-</head>
+<!-- main-content -->
 
-<body>
-<div class="wrapper">
-{{ title }}
-    <br/>
-
-    <h4>This page shows the listing for a name </h4>
-    id: {{ name.id }}<br/>
-    name: {{ name.name }}<br/>
-    submitted by: {{ name.submittedBy }}<br/>
+<div class="search jumbotron" id="home-banner">
+		<div class="container" align="center">
+			<p>{{message "lang.jumbotron1"}} <span class="pri-color">10,000</span> {{message "lang.jumbotron2"}}</p>
+	        {{> searchcomponent }} 
+	    </div>
 </div>
-<!-- Javascript -->
-{{> scriptIncludes }}
+<!-- /Search -->
 
-</body>
-</html>
+<div class="container">
+	<div class="row">
+		<div class="col-md-8">
+
+			<div class="well">
+				<div class="row">
+					<div class="col-sm-8">
+						<h2 class="name">
+						{{ name.name }} 
+						<button class="name-sound">
+							<i class="fa fa-volume-up" data-toggle="tooltip" data-placement="top" title="{{message "lang.play-sound"}}"></i>
+						</button>
+						</h2>										
+						<p>{{message "lang.pronounciation"}} /Ko-ko/</p>
+					</div>
+					<div class="col-sm-4 small">
+						<div class="name-s-col">
+							<a href="#">
+								{{message "lang.share"}} <i class="fa fa-share-alt"></i>
+							</a>
+						</div>
+						<div class="name-s-col">
+							<a href="/improve-entry">
+								{{message "lang.improve-entry"}} <i class="fa fa-pencil"></i>
+							</a>
+						</div>
+					</div>
+				</div>			
+				<hr>
+				<p class="small">{{message "lang.submitby"}} {{ name.submittedBy }}</p>			
+			</div>
+
+			<div class="well">
+				<h4 class="name">{{message "lang.meaningof"}}{{ name.name }}</h4>
+				<hr>
+				<p class="meaning">This name means bla bla bla...</p><br><br>
+				<h5 class="name">{{message "lang.storyof"}}</h5>
+				<hr>
+				<p>The story abou the name goes here..........please write</p>
+			</div>
+			<!-- /meaning of name -->
+
+			<div class="well">
+				<h4 class="name">{{message "lang.morphology"}}</h4>
+				<hr>
+				<p>Mor-pho-lo-gy goes here...</p>
+			</div>
+			<!-- /morphology -->
+
+			<div class="well">
+				<h4 class="name">{{message "lang.etymology"}}</h4>
+				<hr>
+				<div class="row">
+					<div class="col-sm-3">Ety<span class="small"> - (child)</span></div>
+					<div class="col-sm-3">Mo<span class="small"> - (sibling)</span></div>
+					<div class="col-sm-3">Lo<span class="small"> - (aunty)</span></div>
+					<div class="col-sm-3">Gy<span class="small"> - (brother)</span></div>
+				</div>
+			</div>
+			<!-- /etymology -->
+
+			<div class="well">
+				<h4 class="name">{{message "lang.geolocation"}}</h4>
+				<hr>
+				<p>Common in Ekiti/Eko...</p>
+			</div>
+			<!-- /geolocation -->
+
+			<div class="well">
+				<h4 class="name">{{message "lang.variants"}}</h4>
+				<hr>
+				<p><a href="#">Akinloye</a></p>
+				<p class="small">(Edo/Warri)</p>
+			</div>
+			<!-- /variants -->
+
+			<div class="well">
+				<h4 class="name">{{message "lang.see-also"}}</h4>
+				<hr>
+				<p><a href="#">Alakija</a></p>
+				<p><a href="#">Omoakin</a></p>
+				<p><a href="#">Oludayo</a></p>
+			</div>
+			<!-- /see also -->
+
+		</div>
+
+		
+
+		<!-- sidebar -->
+		<div class="col-md-4">
+			{{> rsidebar }}
+		</div>
+		<!-- /sidebar -->
+
+	</div>
+</div>
+
+<!-- /main-content -->
+
+<!-- footer -->
+{{> footer }}
