YOR-50 Added more dummy entry for name fields. Updated template to show more dummy fields

--- a/website/src/main/resources/website/searchresults.hbs
+++ b/website/src/main/resources/website/searchresults.hbs
@@ -15,15 +15,17 @@
     <div class="row">
         <div class="col-md-8">
 
-            <h4>{{message "lang.entryfoundfor"}}<span class="name">Koko</span></h4>
-            <div class="well">
+            <h4>{{message "lang.entryfoundfor"}}<span class="name">{{query}}</span></h4>
+
                 {{#each names}}
+                <div class="well">
                     <h4 class="name">name: <a href="/entries/{{this.name}}">{{ this.name }}</a></h4>
-                    <p><i>Brief meaning: </i></p>
+                    <p><i>Brief meaning: </i> {{this.meaning}} </p>
                     <p class="small">{{message "lang.submitby"}} {{ this.submittedBy }} </p>       
                     <hr>
+                </div>
                 {{/each}}
-            </div>
+
 
         </div>
 
