--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -24,7 +24,7 @@
 							<i class="fa fa-volume-up" data-toggle="tooltip" data-placement="top" title="{{message "lang.play-sound"}}"></i>
 						</button>
 						</h2>										
-						<p>{{message "lang.pronounciation"}} /Ko-ko/</p>
+						<p>{{message "lang.pronounciation"}} {{ name.pronunciation}}</p>
 					</div>
 					<div class="col-sm-4 small">
 						<div class="name-s-col">
@@ -46,56 +46,49 @@
 			<div class="well">
 				<h4 class="name">{{message "lang.meaningof"}}{{ name.name }}</h4>
 				<hr>
-				<p class="meaning">This name means bla bla bla...</p><br><br>
-				<h5 class="name">{{message "lang.storyof"}}</h5>
+				<p class="meaning">{{ name.meaning }}</p><br><br>
+				<h5 class="name">{{message "lang.extendedmeaningof"}}</h5>
 				<hr>
-				<p>The story abou the name goes here..........please write</p>
+				<p>{{name.extendedMeaning }}</p>
 			</div>
 			<!-- /meaning of name -->
 
 			<div class="well">
 				<h4 class="name">{{message "lang.morphology"}}</h4>
 				<hr>
-				<p>Mor-pho-lo-gy goes here...</p>
+				<p>{{name.morphology}}</p>
 			</div>
 			<!-- /morphology -->
 
 			<div class="well">
 				<h4 class="name">{{message "lang.etymology"}}</h4>
 				<hr>
-				<div class="row">
-					<div class="col-sm-3">Ety<span class="small"> - (child)</span></div>
-					<div class="col-sm-3">Mo<span class="small"> - (sibling)</span></div>
-					<div class="col-sm-3">Lo<span class="small"> - (aunty)</span></div>
-					<div class="col-sm-3">Gy<span class="small"> - (brother)</span></div>
-				</div>
+            <div class="row">
+                {{#each name.etymology}}
+                        <span>{{this.part}}</span><span> - ({{this.meaning}})</span>
+				{{/each}}
+            </div>
 			</div>
 			<!-- /etymology -->
 
 			<div class="well">
 				<h4 class="name">{{message "lang.geolocation"}}</h4>
 				<hr>
-				<p>Common in Ekiti/Eko...</p>
+				<p>{{message "lang.commonin"}} {{name.geoLocation.place}}</p>
 			</div>
 			<!-- /geolocation -->
 
 			<div class="well">
 				<h4 class="name">{{message "lang.variants"}}</h4>
 				<hr>
-				<p><a href="#">Akinloye</a></p>
-				<p class="small">(Edo/Warri)</p>
 			</div>
 			<!-- /variants -->
 
 			<div class="well">
 				<h4 class="name">{{message "lang.see-also"}}</h4>
 				<hr>
-				<p><a href="#">Alakija</a></p>
-				<p><a href="#">Omoakin</a></p>
-				<p><a href="#">Oludayo</a></p>
 			</div>
 			<!-- /see also -->
-
 		</div>
 
 		
